<resources>
    <string name="app_name">SEPA Client</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_accueil">Accueil </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SEPA Client </string>
    <string name="nav_header_subtitle">Credit Inst Simple</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Acceuil</string>
    <string name="menu_virement">Virement</string>
    <string name="menu_historique">Historique</string>
    <string name="editTextAmount" >Amount</string>
    <string name="prenoms">Prenoms</string>
    <string name="solde">Solde</string>
    <string name="montant">Montant</string>
    <string name="nom">Nom</string>
    <string name="iban">Iban</string>
    <string name="bic">Bic</string>
    <string name="default_bic">Default Bic</string>
    <string name="euros">Eur</string>
    <string name="default_iban">Default Iban</string>
    <string name="default_name">Default Name</string>
    <string name="default_surname">Default Surname</string>
    <string name="historique_des_virements">historique des virements</string>
    <string name="settings_base_url_default">http://serveur-apprentissage.ensicaen.fr:8080/library/</string>
    <string name="image_description">Login Image</string>
    <string name="User_Id">User Id</string>
</resources>