<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:drawingCacheQuality="auto"
    android:focusable="false"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:duplicateParentState="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:freezesText="true"
        android:inputType="textNoSuggestions"
        android:text="@string/default_name"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/editTextBic"
        tools:ignore="Deprecated,LabelFor" />

    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="84dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="#EFEDED"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="monospace"
        android:freezesText="true"
        android:inputType="textNoSuggestions"
        android:text="@string/euros"
        android:textAlignment="center"
        android:textCursorDrawable="@android:drawable/editbox_dropdown_light_frame"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
        tools:ignore="Deprecated,LabelFor,TextSizeCheck" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="#EFEDED"
        android:padding="15dp"
        android:text="@string/nom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBic" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:focusable="false"
        android:fontFamily="sans-serif-smallcaps"
        android:freezesText="true"
        android:inputType="textNoSuggestions"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/editTextAmount"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextCurrency"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toEndOf="@+id/txtAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
        tools:ignore="Deprecated,LabelFor" />

    <TextView
        android:id="@+id/txtBic"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="#EFEDED"
        android:padding="15dp"
        android:text="@string/bic"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIban" />

    <TextView
        android:id="@+id/txtSurname"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="#EFEDED"
        android:padding="15dp"
        android:text="@string/prenoms"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/editTextBic"
        android:layout_width="161dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:inputType="textNoSuggestions"
        android:text="@string/default_bic"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toEndOf="@+id/txtBic"
        app:layout_constraintTop_toBottomOf="@+id/editTextIban"
        tools:ignore="Deprecated,LabelFor" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:freezesText="true"
        android:inputType="textNoSuggestions"
        android:text="@string/default_surname"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/txtSurname"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="Deprecated,LabelFor" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#EFEDED"
        android:padding="15dp"
        android:text="@string/montant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurname" />

    <TextView
        android:id="@+id/txtIban"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="#EFEDED"
        android:padding="15dp"
        android:text="@string/iban"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIban"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="serif-monospace"
        android:freezesText="false"
        android:inputType="textLongMessage"
        android:singleLine="false"
        android:text="@string/default_iban"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIban"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>