<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ensicaen.sepa_vue_2.ui.virement.VirementFragment">

    <TextView
        android:id="@+id/text_virement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMotif"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:freezesText="false"
        android:hint="Motif du virement"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:freezesText="false"
        android:hint="Numéro de téléphone du bénéficiaire"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVirTextIban" />

    <EditText
        android:id="@+id/editVirTextIban"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="serif-monospace"
        android:freezesText="false"
        android:inputType="textLongMessage"
        android:singleLine="false"
        android:text="@string/default_iban"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_virement"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtMotif"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="#EFEDED"
        android:labelFor="@id/editTextMotif"
        android:padding="15dp"
        android:text="Motif"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editTextMotif"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="#EFEDED"
        android:labelFor="@id/editTextPhone"
        android:padding="15dp"
        android:text="Numéro"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVirTextIban" />

    <EditText
        android:id="@+id/editTextVirAmount"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-condensed-light"
        android:hint="Montant en Euro"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMotif" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="#EFEDED"
        android:labelFor="@id/editTextVirAmount"
        android:padding="15dp"
        android:text="@string/montant"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editTextVirAmount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMotif" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="163dp"
        android:layout_height="154dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/btnVir"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#2B719F"
        android:text="Valider"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVirAmount" />

    <Button
        android:id="@+id/btnResetVir"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#29AA36"
        android:text="Annuler"
        android:textColor="#3E2723"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btnVir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <TextView
        android:id="@+id/currencyVir"
        android:layout_width="52dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="57dp"
        android:text="@string/euros"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnVir"
        app:layout_constraintStart_toEndOf="@+id/editTextVirAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextMotif" />

</androidx.constraintlayout.widget.ConstraintLayout>